More work on updater/installer.
 * Now supports installation
 * Symbolic link suport
 * Single-instance re-use